// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectStories should collect stories from StoryBook: ViaStoriesJson 1`] = `
{
  "stories": [
    {
      "id": "example-introduction--page",
      "importPath": "./stories/Introduction.stories.mdx",
      "name": "Page",
      "title": "Example/Introduction",
    },
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "name": "Primary",
      "title": "Example/Button",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "name": "Secondary",
      "title": "Example/Button",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "name": "Large",
      "title": "Example/Button",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "name": "Small",
      "title": "Example/Button",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "name": "Logged In",
      "title": "Example/Header",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "name": "Logged Out",
      "title": "Example/Header",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "name": "Logged In",
      "title": "Example/Page",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "name": "Logged Out",
      "title": "Example/Page",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaWindowApi 1`] = `
{
  "stories": [
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--primary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
            "type": {
              "name": "boolean",
            },
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "primary": true,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Primary",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--secondary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Secondary",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--large",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "large",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Large",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--small",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "small",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Small",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--masked",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--masked",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "iframeHeight": 100,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": undefined,
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "lostpixel": {
          "mask": [
            {
              "selector": "a",
            },
          ],
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Masked",
    },
  ],
}
`;

exports[`collectStories should collect stories from StoryBook: ViaWindowApi StoryStore v7 1`] = `
{
  "stories": [
    {
      "id": "example-button--primary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--primary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
            "type": {
              "name": "boolean",
            },
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "primary": true,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "lostpixel": {
          "breakpoints": [
            420,
            1000,
          ],
          "extraShots": [
            {
              "args": {
                "label": "XXX",
              },
              "suffix": "with XXX label",
            },
            {
              "args": {
                "backgroundColor": "red",
                "label": "MMM",
                "primary": false,
              },
              "suffix": "with MMM label & red",
            },
          ],
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Primary",
    },
    {
      "id": "example-button--secondary",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--secondary",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "lostpixel": {
          "breakpoints": [
            542,
            1042,
          ],
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Secondary",
    },
    {
      "id": "example-button--large",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--large",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "large",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Large",
    },
    {
      "id": "example-button--small",
      "importPath": "./stories/Button.stories.js",
      "kind": "Example/Button",
      "parameters": {
        "__id": "example-button--small",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "backgroundColor": {
            "control": {
              "type": "color",
            },
            "name": "backgroundColor",
          },
          "label": {
            "control": {
              "type": "text",
            },
            "name": "label",
            "type": {
              "name": "string",
            },
          },
          "onClick": {
            "action": "onClick",
            "name": "onClick",
          },
          "primary": {
            "control": {
              "type": "boolean",
            },
            "name": "primary",
          },
          "size": {
            "control": {
              "type": "select",
            },
            "name": "size",
            "options": [
              "small",
              "medium",
              "large",
            ],
            "type": {
              "name": "string",
            },
          },
        },
        "args": {
          "label": "Button",
          "onClick": undefined,
          "size": "small",
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Button.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "({ label, ...args }) => {
  // You can either use a function to create DOM elements or use a plain html string!
  // return \`<div>\${label}</div>\`;
  return createButton({ label, ...args });
}",
        },
      },
      "story": "Small",
    },
    {
      "id": "example-header--logged-in",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-header--logged-out",
      "importPath": "./stories/Header.stories.js",
      "kind": "Example/Header",
      "parameters": {
        "__id": "example-header--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Header.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createHeader(args)",
        },
      },
      "story": "Logged Out",
    },
    {
      "id": "example-page--logged-in",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-in",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
          "user": {
            "control": {
              "type": "object",
            },
            "name": "user",
            "type": {
              "name": "object",
              "value": {},
            },
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
          "user": {},
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged In",
    },
    {
      "id": "example-page--logged-out",
      "importPath": "./stories/Page.stories.js",
      "kind": "Example/Page",
      "parameters": {
        "__id": "example-page--logged-out",
        "__isArgsStory": true,
        "actions": {
          "argTypesRegex": "^on[A-Z].*",
        },
        "argTypes": {
          "onCreateAccount": {
            "action": "onCreateAccount",
            "name": "onCreateAccount",
          },
          "onLogin": {
            "action": "onLogin",
            "name": "onLogin",
          },
          "onLogout": {
            "action": "onLogout",
            "name": "onLogout",
          },
        },
        "args": {
          "onCreateAccount": undefined,
          "onLogin": undefined,
          "onLogout": undefined,
        },
        "backgrounds": {
          "grid": {
            "cellAmount": 5,
            "cellSize": 20,
            "opacity": 0.5,
          },
          "values": [
            {
              "name": "light",
              "value": "#F8F8F8",
            },
            {
              "name": "dark",
              "value": "#333333",
            },
          ],
        },
        "controls": {
          "matchers": {
            "color": /\\(background\\|color\\)\\$/i,
            "date": /Date\\$/,
          },
        },
        "docs": {
          "getContainer": undefined,
          "getPage": undefined,
          "inlineStories": true,
          "prepareForInline": undefined,
          "source": {
            "language": "html",
            "type": "dynamic",
          },
        },
        "fileName": "./stories/Page.stories.js",
        "framework": "html",
        "globalTypes": {},
        "globals": {
          "measureEnabled": false,
          "outline": false,
        },
        "storySource": {
          "source": "(args) => createPage(args)",
        },
      },
      "story": "Logged Out",
    },
  ],
}
`;
